@@ -9,6 +9,7 @@ list_mgmt <- function(path, query, token) {
     data_df <- data_json$items
     data_df$created <- as.POSIXct(strptime(data_df$created, format = "%Y-%m-%dT%H:%M:%OS", tz = "GMT"))
     data_df$updated <- as.POSIXct(strptime(data_df$updated, format = "%Y-%m-%dT%H:%M:%OS", tz = "GMT"))
+    attr(data_df, "username") <- data_json$username
     return(data_df)
 }
 
